# rimmich

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yml
assets/: home.css  main.css  settings.css
src/: components.rs  core.rs  i18n.rs  lib.rs  main.rs
src/components/: helper.rs  home.rs  icons.rs  mod.rs  router.rs  settings.rs  settings_view.rs
src/components/home/: file_list.rs  icons.rs  upload.rs
src/components/settings/: concurrency_config.rs  icons.rs  language_config.rs  server_config.rs  user_management.rs
src/core/: config.rs  i18n.rs  immich.rs
src/models/: app.rs  mod.rs  user.rs
src/services/: config.rs  i18n.rs  immich_api.rs  log.rs  mod.rs  settings.rs
