[package]
name = "rimmich"
version = "0.1.0"
authors = ["xufang"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
dioxus = { version = "0.7.1", features = ["desktop"] }
reqwest = { version = "0.13.1", features = ["multipart", "json", "stream"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.148"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
dirs = "6.0.0"
toml = "0.9.8"
tokio-util = { version = "0.7.18", features = ["codec"] }
rfd = "0.17.1"
infer = "0.19.0"
image = "0.25.5"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
